--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ repositories {
 		name = 'GeckoLib'
 		url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
 	}
+	mavenCentral() // or jcenter()
+	maven { url 'https://maven.fabricmc.net/' }
+	maven { url 'https://repo.spongepowered.org/maven/' } // Add this if missing
 }
 
 loom {
@@ -61,6 +64,7 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	implementation 'org.spongepowered:mixin:0.8.2' // Add the Mixin library
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
