Progress with guns. adds damage and corrects some values Progress with custom bullets, dynamically generates them and sets up there name
DOES NOT FIX LOADING, THIS IS A FRAMEWORK

--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = 17
+	options.compilerArgs << "-Xlint:deprecation"
 }
 
 java {
