--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,9 @@ sourceSets {
 
 dependencies {
     implementation 'org.jetbrains:annotations:24.0.0'
+	implementation group: 'net.sourceforge.pmd', name: 'pmd-core', version: '6.42.0' // Use the latest version
 
-    // To change the versions see the gradle.properties file
+	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
@@ -77,6 +78,8 @@ dependencies {
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 
 	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.20.1:4.2.2'
+
+
 
 }
 
