--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.3-SNAPSHOT'
+	id 'fabric-loom' version '1.4-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -10,8 +10,6 @@ base {
 	archivesName = project.archives_base_name
 }
 
-
-// This is the repositories block in your build.gradle. NOT the one in publishing, or in buildscript. If it does not exist already, create it.
 repositories {
 	maven {
 		name = 'GeckoLib'
@@ -31,7 +29,6 @@ loom {
 			sourceSet sourceSets.client
 		}
 	}
-
 	runs {
 		// This adds a new gradle task that runs the datagen API: "gradlew runDatagen"
 		datagen {
@@ -39,15 +36,13 @@ loom {
 			name "Data Generation"
 			vmArg "-Dfabric-api.datagen"
 			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
-			vmArg "-Dfabric-api.datagen.modid=tutorialmod"
+			vmArg "-Dfabric-api.datagen.modid=shit"
 
 			runDir "build/datagen"
 		}
 	}
-
 }
 
-// Add the generated resources to the main source set
 sourceSets {
 	main {
 		resources {
@@ -58,29 +53,19 @@ sourceSets {
 	}
 }
 
-
 dependencies {
-    implementation 'org.jetbrains:annotations:24.0.0'
-	implementation group: 'net.sourceforge.pmd', name: 'pmd-core', version: '6.42.0' // Use the latest version
+	implementation 'org.jetbrains:annotations:24.0.0'
+	implementation group: 'net.sourceforge.pmd', name: 'pmd-core', version: '6.42.0'
 
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	implementation 'org.spongepowered:mixin:0.8.2' // Add the Mixin library
+	implementation 'org.spongepowered:mixin:0.8.2'
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	// Uncomment the following line to enable the deprecated Fabric API modules.
-	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
-
-	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
-
 	modImplementation 'software.bernie.geckolib:geckolib-fabric-1.20.1:4.2.2'
 
-
-
+	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 }
 
 processResources {
@@ -97,9 +82,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
 	sourceCompatibility = JavaVersion.VERSION_17
@@ -112,7 +94,6 @@ jar {
 	}
 }
 
-// configure the maven publication
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
@@ -122,9 +103,6 @@ publishing {
 
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+
 	}
 }
