--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ fabric_version=0.90.7+1.20.1
 # Mod Properties
 mod_version = 1.0.0
 maven_group = com.spirit
-archives_base_name = the-shit-of-crypt
+archives_base_name = minceraft
