minceraft.main java/com/spirit/koil/api/bukkit advancement Advancement.java AdvancementDisplay.java AdvancementDisplayType.java AdvancementProgress.java package-info.java attribute Attributable.java Attribute.java AttributeInstance.java AttributeModifier.java package-info.java ban IpBanList.java package-info.java ProfileBanList.java block banner package-info.java Pattern.java PatternType.java data type AmethystCluster.java Bamboo.java Barrel.java Bed.java Beehive.java Bell.java BigDripleaf.java BrewingStand.java BubbleColumn.java Cake.java CalibratedSculkSensor.java Campfire.java Candle.java CaveVines.java CaveVinesPlant.java Chain.java Chest.java ChiseledBookshelf.java Cocoa.java CommandBlock.java Comparator.java CopperBulb.java CoralWallFan.java Crafter.java DaylightDetector.java DecoratedPot.java Dispenser.java Door.java Dripleaf.java EnderChest.java EndPortalFrame.java Farmland.java Fence.java Fire.java Furnace.java Gate.java GlassPane.java GlowLichen.java Grindstone.java HangingSign.java Hopper.java Jigsaw.java Jukebox.java Ladder.java Lantern.java Leaves.java Lectern.java Light.java LightningRod.java MangrovePropagule.java NoteBlock.java Observer.java package-info.java PinkPetals.java Piston.java PistonHead.java PitcherCrop.java PointedDripstone.java RedstoneRail.java RedstoneWallTorch.java RedstoneWire.java Repeater.java RespawnAnchor.java Sapling.java Scaffolding.java SculkCatalyst.java SculkSensor.java SculkShrieker.java SculkVein.java SeaPickle.java Sign.java Slab.java SmallDripleaf.java Snow.java Stairs.java StructureBlock.java Switch.java TechnicalPiston.java TNT.java TrapDoor.java TrialSpawner.java Tripwire.java TripwireHook.java TurtleEgg.java Wall.java WallHangingSign.java WallSign.java Ageable.java AnaloguePowerable.java Attachable.java Bisected.java BlockData.java Brushable.java Directional.java FaceAttachable.java Hangable.java Hatchable.java Levelled.java Lightable.java MultipleFacing.java Openable.java Orientable.java package-info.java Powerable.

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'fabric-loom' version '1.3-SNAPSHOT'
 	id 'maven-publish'
+	id 'org.jetbrains.kotlin.jvm' version '1.9.23'
 }
 
 version = project.mod_version
@@ -14,6 +15,7 @@ repositories {
 	maven { url 'https://repo.spongepowered.org/maven/' } // Add this if missing
 	maven { url "https://maven.nucleoid.xyz/" }
 	maven { url 'https://maven.wispforest.io' }
+	mavenCentral()
 }
 
 loom {
@@ -44,9 +46,22 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	implementation 'org.jetbrains:annotations:24.0.0'
+	modImplementation "net.fabricmc:fabric-language-kotlin:1.10.19+kotlin.1.9.23"
 	modImplementation include("eu.pb4:common-protection-api:${project.common_protection_api_version}")
+
+	implementation 'org.jetbrains:annotations:24.0.1'
+	implementation "net.kyori:adventure-api:4.16.0"
+	implementation 'org.yaml:snakeyaml:2.2'
+	implementation 'org.joml:joml:1.10.5'
+	implementation 'org.apache.maven:maven-plugin-api:3.9.6'
+	implementation "org.apache.maven.resolver:maven-resolver-api:${project.apache_maven_resolver}"
+	implementation "org.apache.maven.resolver:maven-resolver-transport-http:${project.apache_maven_resolver}"
+	implementation "org.apache.maven.resolver:maven-resolver-connector-basic:${project.apache_maven_resolver}"
+	implementation 'org.apache.maven.plugin-tools:maven-plugin-tools-api:3.12.0'
+	implementation 'org.apache.maven:maven-plugin-api:3.9.6'
+	implementation 'org.apache.commons:commons-compress:1.21'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 }
 
@@ -74,12 +89,13 @@ tasks.withType(JavaCompile).configureEach {
 java {
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
 }
 
 jar {
 	from("LICENSE") {
 		rename { "${it}_${project.archivesBaseName}"}
 	}
+}
+kotlin {
+	jvmToolchain(17)
 }
