--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,9 @@ loader_version=0.15.7
 
 fabric_version=0.91.0+1.20.1
 common_protection_api_version=1.0.0
+apache_maven_resolver=1.9.18
 
 # Mod Properties
-mod_version = 0.70.14
+mod_version = 0.70.15
 maven_group = com.spirit
 archives_base_name = minceraft
