--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
+}
